# config

./: .bazelrc  BUILD.bazel  MODULE.bazel
.github/workflows/: bzlmod-archive.yml  bzlmod-release.yml
checks/architecture/: Jamroot.jam  mips64.cpp
include/boost/config/: auto_link.hpp  user.hpp
include/boost/config/compiler/: borland.hpp  clang.hpp  codegear.hpp  gcc.hpp  intel.hpp  sunpro_cc.hpp  xlcpp.hpp
include/boost/config/detail/: select_compiler_config.hpp
test/: BUILD.bazel  MODULE.bazel  boost_has_part_alloc.ipp  boost_no_cwchar.ipp  boost_no_cxx11_alignas.ipp  boost_no_cxx11_thread_local.ipp  boost_no_cxx11_user_lit.ipp  boost_no_cxx17_if_constexpr.ipp  boost_no_cxx17_iterator_traits.ipp  boost_no_cxx17_std_invoke.ipp  boost_no_decltype.ipp  boost_no_i64_limits.ipp  boost_no_limits.ipp  boost_no_ll_limits.ipp  boost_no_std_allocator.ipp  boost_no_std_wstreambuf.ipp  cstdint_test.cpp  cstdint_test2.cpp  limits_test.cpp  math_info.cpp
test/abi/: abi_test.hpp
tools/: generate.cpp
